меняет текст на главной странице

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <section class="portfolio">
       <h2 class="subheading">Мои работы</h2>
+      <p>Никаких работ пока нет!</p>
 
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
